# smtkit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
crates/smtkit-ci/: Cargo.toml
crates/smtkit-ci/src/: main.rs
crates/smtkit-core/: Cargo.toml
crates/smtkit-core/src/: lib.rs
crates/smtkit-smtlib/: Cargo.toml
crates/smtkit-smtlib/src/: emit.rs  lib.rs  session.rs  sexp.rs  smt2.rs  solver.rs
crates/smtkit-z3/: Cargo.toml
crates/smtkit-z3/src/: lib.rs
examples/: README.md  constrained_soft_path.rs  enumerate_graph_coloring_inproc.rs  enumerate_graph_coloring_session.rs  graph_coloring.rs  maximize_red.rs  ontology_consistency.rs  pareto_frontier.rs  session_determinism_hooks.rs
src/: lib.rs
tests/: smt2_serialization.rs
