[package]
name = "smtkit-ci"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

description = "CI smoke binary for smtkit workspace"

[dependencies]
smtkit = { path = "../.." }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }